monticore-generator/src/test/resources/cocos/invalid/A0113/A0113.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.invalid.A0113;

grammar A0113 {

    Sup extends Super = "a";

}
